# rdeditor

./: .gitignore  CITATION.bib  DEVELOPER.md  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: actions.yml  format.yml
rdeditor/: Mendelev_extract.py  __init__.py  molEditWidget.py  molViewWidget.py  ptable.py  ptable_widget.py  rdEditor.py  reaction.py  templatehandler.py  test_stereo.mol  utilities.py
rdeditor/icon_themes/dark/: index.theme
rdeditor/icon_themes/dark/application/: convert.sh
rdeditor/icon_themes/light/: index.theme
rdeditor/jupyter_widget/: __init__.py  molsvgwidget.js  rdeditor_widget.py
